--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,124 @@
      
 }
 
+body {
+  background-color: black;
+}
 @font-face{
   font-family:'Over Wave';
   src:
     url(Overwave.otf);
+}
+img {
+  height: 60vh;
+  width: 50vw;
+  margin-top: 40px;
+  margin-left: 60px;
+  margin-right: 50px;
+
+}
+.logo-container{
+  position: relative;
+  width:60%;
+  height:100vh;
+  margin-left: 0px;
+  
+}
+.logo-text {
+  position: absolute;
+  top: 55%;
+  left: 77%;
+   transform: translate(-50%, -50%);
+  width: 50vw;
+  color:#4db1bc;
+  font-family: "Blue Wave";
+  font-size: 48px;
+}
+.logo-text {
+  text-transform: uppercase;
+  animation: glow 2s ease-in-out infinite alternate;
+}
+@keyframes glow {
+  from {
+    text-shadow: 0 0 20px #2d9da9;
+  }
+  to {
+    text-shadow: 0 0 30px #34b3c1, 0 0 10px #4dbbc7;
+  }
+}
+.quote {
+  text-align: center;
+  color: white;
+}
+.home {
+  display:flex;
+  background-image: url(Slash\ \(1\).png);
+  background-repeat: no-repeat;
+  background-size: cover; 
+  padding:0%
+  width:100vw;
+  height:100vh;
+}
+.quote {
+  padding-right: 100px;
+  padding-left: 50px;
+}
+.records {
+  /* background-color: red; */
+  transform: rotate(30deg);
+  height: 120vh;
+  width: 50vw;
+  overflow: hidden;
+  margin-right: 10px;
+  margin-top: 50px;
+ 
+  /* margin-left: 20px; */
+}
+.record-image {
+  width: 300px;
+  height:300px;
+  /* margin-left: 80px; */
+  transform: rotate(-90deg);
+ 
+}
+.records-container {
+  display: flex;
+  flex-direction: column;
+  white-space: nowrap;
+  /* transform: rotate(30deg); */
+  animation: scroll 10s linear infinite alternate;
+  margin-bottom:300px;
+}
+
+@keyframes scroll{
+  0% { transform: translateY(0); }
+	100% { transform: translateY(calc(-2875px))};
+}
+
+
+
+#college {
+margin-left: 50px;;
+}
+#adventure {
+margin-left: 100px;
+}
+#music {
+margin-left: 50px;
+}
+#password {
+  margin-left: 100px;
+}
+@mixin white-gradient {
+	background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+}
+
+.records-container:before {
+  left: 0;
+  background: linear-gradient(to right, rgba(0, 0, 0, 1) 20px, rgba(0, 0, 0, 0));
+}
+
+.records-container:after {
+  right: 0;
+  background: linear-gradient(to left, rgba(0, 0, 0, 1) 20px, rgba(0, 0, 0, 0));
 }
